--- a/templates/index.html
+++ b/templates/index.html
@@ -13,25 +13,33 @@
     <link rel="stylesheet" href="../static/style.css">
 </head>
 <body>    
-    <form class="container" id="upload-form" enctype="multipart/form-data" action="/process" method="POST">
-        <h1>CargoScan AI Web App</h1>
-        <figure class="image-container">
-            <img id="chosen-image">
-            <figcaption id="file-name">
-                Demo File Name
-            </figcaption>
-        </figure>
-        <input type="file" id="upload-button" accept="image/*" name="image">
-        <label for="upload-button">
-            <i class="fa fa-upload"></i> &nbsp;
-            Choose a photo
-        </label>
+    <div class="container">
+        <form id="upload-form" enctype="multipart/form-data" action="/process" method="POST">
+            <h1>CargoScan AI Web App</h1>
+            <figure class="image-container">
+                <img id="chosen-image">
+                <figcaption id="file-name">
+                    Demo File Name
+                </figcaption>
+            </figure>
+            <input type="file" id="upload-button" accept="image/*" name="image">
+            <label for="upload-button">
+                <i class="fa fa-upload"></i> &nbsp;
+                Choose a photo
+            </label>
 
-        <button type="submit" id="submit" class="btn">
-            <i class="fa fa-check"></i> &nbsp;
-            Process
-        </button>
-    </form>
+            <button type="submit" id="submit" class="btn">
+                <i class="fa fa-check"></i> &nbsp;
+                Process
+            </button>
+        </form>
+        <form action="/table" method="get">
+            <button type="submit" class="back-btn blue">
+                <i class="fa fa-database"></i> &nbsp;
+                Datatable
+            </button>
+        </form>
+    </div>
     <!-- JS Script -->
     <script src="../static/script.js"></script>
 </body>
